filter alignment fix

--- a/components/store-collections.module.css
+++ b/components/store-collections.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   line-height: 2rem;
 }
